# skill-briefing

./: .gitignore  config.json  config.py  db.py  downloader.py  install.sh  main.py  pyproject.toml  requirements.txt  transcriber.py
