[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefing"
version = "0.1.0"
dependencies = [
  "sqlalchemy",
  "yt-dlp",
  "moviepy",
  "faster-whisper",
]

[project.scripts]
briefing = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "db", "downloader", "transcriber"]
